@@ -117,7 +117,7 @@ modfinfo_enter(view_t *v)
 
 	term_title_update("File Information");
 	vle_mode_set(FILE_INFO_MODE, VMT_PRIMARY);
-	ui_qv_cleanup_if_needed();
+	ui_hide_graphics();
 	view = v;
 	ui_setup_for_menu_like();
 	modfinfo_redraw();
